データ取得ノードの最大取得件数　修正

--- a/nodes/retrieve-getchartdata.html
+++ b/nodes/retrieve-getchartdata.html
@@ -373,7 +373,7 @@
 <div class="form-row">
 	<label for="node-input-limit"><i class="fa fa-clone"></i> <span
 			data-i18n="retrievegetchartdata.label.limit"></span></label>
-	<input type="text" style="width:130px;" id="node-input-limit">
+	<input type="number" style="width:130px;" id="node-input-limit" min="1" max="1000">
 </div>
 
 <div class="form-group hide" id="node-row-SortSet">
