--- a/nodes/retrieve.html
+++ b/nodes/retrieve.html
@@ -266,7 +266,7 @@
 	<!-- データ件数 -->
 	<div class="form-row">
 		<label for="node-input-limit"><i class="fa fa-clone"></i> <span data-i18n="retrieve.label.limit"></span></label>
-		<input type="text" style="width:130px;" id="node-input-limit">
+		<input type="number" style="width:130px;" id="node-input-limit" min="1" max="1000">
 	</div>
 </div>
 
